# DjangoProjectModelRestFramework

./: .env.example  Pipfile  README.md  pyproject.toml  requirements.txt
core/: urls.py
core/settings/: localhost.py  settings.py
