[tool.poetry]
name = "djangoprojectmodelrestframework"
version = "0.1.0"
description = ""
authors = ["Julian de Almeida Santos <julian.santos.info@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
dj-rest-auth = "^6.0.0"
django-admin-interface = "^0.29.1"
django-allauth = {extras = ["socialaccount"], version = "^65.1.0"}
django-cors-headers = "^4.6.0"
django-environ = "^0.11.2"
django-filter = "^24.3"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
whitenoise = "^6.8.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
ipython = "^8.29.0"
isort = "^5.13.2"
pylint = "^3.3.1"
pylint-django = "^2.6.1"
pylint-plugin-utils = "^0.8.2"
taskipy = "^1.14.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
